--- a/index.html
+++ b/index.html
@@ -48,86 +48,140 @@
     </div>
   </div>
 
-  <script>
-    function getProfileIdFromHash() {
-      // expected: #/p/<profileId>
-      const h = window.location.hash || "";
-      const parts = h.replace(/^#\/?/, "").split("/");
-      if (parts.length >= 2 && parts[0] === "p") return decodeURIComponent(parts[1]);
-      return null;
+  <script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-app.js";
+  import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyAEcMpo48_LUd-a0KPETbSNi1nKEhF2jaQ",
+    authDomain: "cryptoid-26e0e.firebaseapp.com",
+    projectId: "cryptoid-26e0e",
+    storageBucket: "cryptoid-26e0e.firebasestorage.app",
+    messagingSenderId: "361788135471",
+    appId: "1:361788135471:web:c7ea5f0486138b0064ceda",
+    measurementId: "G-K96EPP6CJ6"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
+  function getProfileIdFromHash() {
+    // expected: #/p/<profileId>
+    const h = window.location.hash || "";
+    const parts = h.replace(/^#\/?/, "").split("/");
+    if (parts.length >= 2 && parts[0] === "p") return decodeURIComponent(parts[1]);
+    return null;
+  }
+
+  const profileId = getProfileIdFromHash();
+  const profileIdEl = document.getElementById("profileId");
+  const statusEl = document.getElementById("status");
+  const linksEl = document.getElementById("links");
+  const subtitleEl = document.getElementById("subtitle");
+
+  const currentUrl = window.location.href;
+
+  profileIdEl.textContent = profileId ?? "(missing)";
+  subtitleEl.textContent = profileId
+    ? "Tap/scan link to view the latest profile."
+    : "Invalid link format. Expected #/p/<profileId>.";
+
+  // Buttons
+  document.getElementById("copyBtn").onclick = async () => {
+    try {
+      await navigator.clipboard.writeText(currentUrl);
+      statusEl.textContent = "Copied link ✅";
+    } catch {
+      statusEl.textContent = "Copy failed. Long-press the URL in browser.";
     }
+  };
 
-    const profileId = getProfileIdFromHash();
-    const profileIdEl = document.getElementById("profileId");
-    const statusEl = document.getElementById("status");
-    const linksEl = document.getElementById("links");
-
-    const currentUrl = window.location.href;
-
-    profileIdEl.textContent = profileId ?? "(missing)";
-
-    // Actions
-    document.getElementById("copyBtn").onclick = async () => {
-      try {
-        await navigator.clipboard.writeText(currentUrl);
-        statusEl.textContent = "Copied link ✅";
-      } catch (e) {
-        statusEl.textContent = "Copy failed. Long-press the URL in browser.";
+  document.getElementById("shareBtn").onclick = async () => {
+    try {
+      if (navigator.share) {
+        await navigator.share({ title: "CryptoID Profile", text: "CryptoID profile link", url: currentUrl });
+        statusEl.textContent = "Shared ✅";
+      } else {
+        statusEl.textContent = "Share not supported here. Use Copy Link.";
       }
-    };
+    } catch {
+      statusEl.textContent = "Share canceled.";
+    }
+  };
 
-    document.getElementById("shareBtn").onclick = async () => {
-      try {
-        if (navigator.share) {
-          await navigator.share({ title: "CryptoID Profile", text: "CryptoID profile link", url: currentUrl });
-          statusEl.textContent = "Shared ✅";
-        } else {
-          statusEl.textContent = "Share not supported here. Use Copy Link.";
-        }
-      } catch (e) {
-        statusEl.textContent = "Share canceled.";
-      }
-    };
+  document.getElementById("txtBtn").onclick = () => {
+    const blob = new Blob([currentUrl + "\n"], { type: "text/plain" });
+    const a = document.createElement("a");
+    a.href = URL.createObjectURL(blob);
+    a.download = "cryptoid-link.txt";
+    a.click();
+    URL.revokeObjectURL(a.href);
+    statusEl.textContent = "Downloaded .txt ✅";
+  };
 
-    document.getElementById("txtBtn").onclick = () => {
-      const blob = new Blob([currentUrl + "\n"], { type: "text/plain" });
-      const a = document.createElement("a");
-      a.href = URL.createObjectURL(blob);
-      a.download = "cryptoid-link.txt";
-      a.click();
-      URL.revokeObjectURL(a.href);
-      statusEl.textContent = "Downloaded .txt ✅";
-    };
-
-    document.getElementById("vcfBtn").onclick = () => {
-      const name = "CryptoID Profile";
-      const vcf =
+  document.getElementById("vcfBtn").onclick = () => {
+    const name = "CryptoID Profile";
+    const vcf =
 `BEGIN:VCARD
 VERSION:3.0
 FN:${name}
 NOTE:CryptoID profile link
 URL:${currentUrl}
 END:VCARD`;
-      const blob = new Blob([vcf], { type: "text/vcard" });
-      const a = document.createElement("a");
-      a.href = URL.createObjectURL(blob);
-      a.download = "cryptoid.vcf";
-      a.click();
-      URL.revokeObjectURL(a.href);
-      statusEl.textContent = "Downloaded contact ✅";
-    };
+    const blob = new Blob([vcf], { type: "text/vcard" });
+    const a = document.createElement("a");
+    a.href = URL.createObjectURL(blob);
+    a.download = "cryptoid.vcf";
+    a.click();
+    URL.revokeObjectURL(a.href);
+    statusEl.textContent = "Downloaded contact ✅";
+  };
 
-    // For now, show placeholder. Next step we’ll fetch real data from Firestore.
-    if (!profileId) {
-      statusEl.textContent = "Invalid link. Expected format: #/p/<profileId>";
-    } else {
-      statusEl.textContent = "Profile loaded (demo). Next: connect Firestore to show links.";
-      // Demo links (remove later)
-      linksEl.style.display = "block";
-      linksEl.innerHTML = `
-        <a href="https://example.com" target="_blank" rel="noopener">Example link</a>
-      `;
+  async function loadProfile(pid) {
+    statusEl.textContent = "Loading profile…";
+    linksEl.style.display = "none";
+    linksEl.innerHTML = "";
+
+    try {
+      const ref = doc(db, "profiles", pid);
+      const snap = await getDoc(ref);
+
+      if (!snap.exists()) {
+        statusEl.textContent = "Profile not found. Ask the sender to re-share.";
+        return;
+      }
+
+      const data = snap.data();
+      const displayName = data.displayName || "CryptoID User";
+      const links = Array.isArray(data.links) ? data.links : [];
+
+      // update heading/subtitle
+      document.querySelector("h1").textContent = displayName;
+      statusEl.textContent = links.length ? "Links" : "No public links shared yet.";
+
+      if (links.length) {
+        linksEl.style.display = "block";
+        linksEl.innerHTML = links
+          .filter(l => l && l.url)
+          .map(l => {
+            const label = (l.label || l.url).toString();
+            const url = l.url.toString();
+            return `<a href="${url}" target="_blank" rel="noopener">${label}</a>`;
+          })
+          .join("");
+      }
+    } catch (e) {
+      console.error(e);
+      statusEl.textContent = "Error loading profile. Try again later.";
     }
-  </script>
+  }
+
+  if (profileId) {
+    loadProfile(profileId);
+  } else {
+    statusEl.textContent = "Invalid link. Example: #/p/test123";
+  }
+</script>
+
 </body>
 </html>
