--- a/index.html
+++ b/index.html
@@ -70,27 +70,56 @@
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
 
+  // ===== Routing helpers =====
+
+  // New canonical route: /cryptoid/u/<profileId>
+  function getProfileIdFromPath() {
+    const path = window.location.pathname || ""; // e.g. "/cryptoid/u/test123"
+    const parts = path.split("/").filter(Boolean); // ["cryptoid","u","test123"]
+    const idx = parts.indexOf("u");
+    if (idx !== -1 && parts[idx + 1]) {
+      return decodeURIComponent(parts[idx + 1]);
+    }
+    return null;
+  }
+
+  // Backward compatible route: #/p/<profileId>
   function getProfileIdFromHash() {
-    const hash = window.location.hash || "";
-    const parts = hash.replace(/^#\/?/, "").split("/");
+    const hash = window.location.hash || ""; // e.g. "#/p/test123"
+    const parts = hash.replace(/^#\/?/, "").split("/"); // ["p","test123"]
     return parts.length === 2 && parts[0] === "p"
       ? decodeURIComponent(parts[1])
       : null;
   }
 
-  const profileId = getProfileIdFromHash();
+  function getProfileId() {
+    return getProfileIdFromPath() || getProfileIdFromHash();
+  }
+
+  function canonicalUrlForProfile(profileId) {
+    // Always share the clean, App-Link-friendly URL
+    const origin = window.location.origin; // https://majid460.github.io
+    return `${origin}/cryptoid/u/${encodeURIComponent(profileId)}`;
+  }
+
+  // ===== DOM =====
+
+  const profileId = getProfileId();
   const profileIdEl = document.getElementById("profileId");
   const statusEl = document.getElementById("status");
   const linksEl = document.getElementById("links");
   const subtitleEl = document.getElementById("subtitle");
-  const currentUrl = window.location.href;
+
+  // For share/copy/download, always prefer canonical link
+  const currentUrl = profileId ? canonicalUrlForProfile(profileId) : window.location.href;
 
   profileIdEl.textContent = profileId ?? "(invalid)";
   subtitleEl.textContent = profileId
     ? "Tap/scan link to view the latest profile."
     : "Invalid CryptoID link.";
 
-  // Buttons
+  // ===== Buttons =====
+
   document.getElementById("copyBtn").onclick = async () => {
     await navigator.clipboard.writeText(currentUrl);
     statusEl.textContent = "Copied link ✅";
@@ -102,6 +131,10 @@
         title: "CryptoID Profile",
         url: currentUrl
       });
+    } else {
+      // fallback
+      await navigator.clipboard.writeText(currentUrl);
+      statusEl.textContent = "Share not supported. Copied link ✅";
     }
   };
 
@@ -126,6 +159,8 @@ END:VCARD`;
     a.download = "cryptoid.vcf";
     a.click();
   };
+
+  // ===== Profile loading =====
 
   async function loadProfile(profileId) {
     statusEl.textContent = "Loading profile…";
@@ -178,36 +213,42 @@ END:VCARD`;
   }
 
   if (profileId) loadProfile(profileId);
-    // TODO: put your real links here later
-const ANDROID_INSTALL_URL = "https://example.com/android.apk";     // replace later
-const IOS_INSTALL_URL = "https://example.com/testflight";         // replace later
 
-// Deep link (works when app is installed)
-const deepLink = profileId
-  ? `cryptoid://p/${encodeURIComponent(profileId)}`
-  : `cryptoid://home`;
+  // ===== Install/Open in app section =====
+  // TODO: replace with real links later
+  const ANDROID_INSTALL_URL = "https://example.com/android.apk";
+  const IOS_INSTALL_URL = "https://example.com/testflight";
 
-const openBtn = document.getElementById("openInAppBtn");
-const aBtn = document.getElementById("installAndroidBtn");
-const iBtn = document.getElementById("installIosBtn");
+  // Deep link (only for the button — NOT for sharing)
+  // Keep consistent with your app handler.
+  const deepLink = profileId
+    ? `cryptoid://profile/${encodeURIComponent(profileId)}`
+    : `cryptoid://home`;
 
-aBtn.href = ANDROID_INSTALL_URL;
-iBtn.href = IOS_INSTALL_URL;
+  const openBtn = document.getElementById("openInAppBtn");
+  const aBtn = document.getElementById("installAndroidBtn");
+  const iBtn = document.getElementById("installIosBtn");
 
-openBtn.onclick = (e) => {
-  e.preventDefault();
-  if (!profileId) return;
+  if (aBtn) aBtn.href = ANDROID_INSTALL_URL;
+  if (iBtn) iBtn.href = IOS_INSTALL_URL;
 
-  // Try opening the app
-  window.location.href = deepLink;
+  if (openBtn) {
+    openBtn.onclick = (e) => {
+      e.preventDefault();
+      if (!profileId) return;
 
-  // If app not installed, user stays on web -> we show hint
-  setTimeout(() => {
-    statusEl.textContent = "If the app didn’t open, install CryptoID below.";
-  }, 900);
-};
+      // Try opening the app
+      window.location.href = deepLink;
+
+      // If app didn't open, user stays on web
+      setTimeout(() => {
+        statusEl.textContent = "If the app didn’t open, install CryptoID below.";
+      }, 900);
+    };
+  }
 
 </script>
+
 
 </body>
 </html>
